# dragenflow

./: .flake8  .gitignore  Pipfile  config.json  flow.py  flowDragen.py  flowEcho.py  flowHead.py  flow_dragen.py  main.py  mypy.ini  new_config.json  noxfile.py  pyproject.toml  readme.md  requirements.txt  run.sh  test.csv  test.py  test.txt  test_samplesheet.csv
.github/workflows/: tests.yml
docs/: conf.py  index.md  src_doc.md  usage.md
dragenflow/: main.py
dragenflow/src/: dragen_commands.py
dragenflow/src/utility/: commands.py
path/210317_A00464_0300_BHW7FTDMXX/: test_samplesheet.csv  test_samplesheet_2.csv  test_samplesheet_updated.csv
src/: dragen_commands.py  dragen_config.json  dragen_pipeline.py  dragen_rna.json  dragen_rna_commands.py  dragen_rna_pipeline.py
src/utility/: commands.py  dragen_utility.py  flow.py
test/: conftest.py  dragen_utility_test.py  flow_dragen_test.py  flow_test.py
tests/: conftest.py  dragen_utility_test.py  flow_dragen_test.py  flow_test.py  main_test.py  pipeline_test.py  rna_pipeline_test.py
utility/: dragen_utility.py  pipeline.py
